# gordion

./: .coverage  .envrc  .flake8  .gitignore  DEVELOPER.md  NOTICE  PUBLISHING.md  README.md  noxfile.py  pyproject.toml  setup.py  tox.ini
src/gordion/: __init__.py  __main__.py  analogs.py  cache.py  exception.py  repository.py  root.py  store.py  tree.py  utils.py  workspace.py  yeditor.py
src/gordion/app/: __init__.py  expand.py  find.py  folder.py  generate.py  main.py  repository_folder.py  root.py  status.py  workspace.py
src/gordion/app/status/: duplicate_repository_folder.py  folder.py  not_found_repository_folder.py  not_listed_repository_folder.py  repository_folder.py  terminal_status.py  wrong_path_repository_folder.py
test/: conftest.py  test_cache.py  test_repository.py  test_status.py
tests/: conftest.py  test_analogs.py  test_app.py  test_cache.py  test_diamond.py  test_main.py  test_repository.py  test_root.py  test_single.py  test_status.py  test_tree.py  test_tree_clean_dirty_cache.py  test_workspace.py
